tests/baselines/reference/typeGuardsWithInstanceOf.errors.txt
tests/cases/conformance/expressions/typeGuards/typeGuardsWithInstanceOf.ts(7,20): error TS2339: Property 'global' does not exist on type 'never'.
  The intersection 'I & RegExp' was reduced to 'never' because property 'global' has conflicting types in some constituents.
tests/cases/conformance/expressions/typeGuards/typeGuardsWithInstanceOf.ts(31,11): error TS2339: Property 'onChanges' does not exist on type 'C | (Validator & Partial<OnChanges>)'.
  Property 'onChanges' does not exist on type 'C'.
tests/cases/conformance/expressions/typeGuards/typeGuardsWithInstanceOf.ts(32,11): error TS2339: Property 'onChanges' does not exist on type 'C | (Validator & Partial<OnChanges>)'.
  Property 'onChanges' does not exist on type 'C'.


==== tests/cases/conformance/expressions/typeGuards/typeGuardsWithInstanceOf.ts (3 errors) ====
    interface I { global: string; }
    var result!: I;
    var result2!: I;
    
    if (!(result instanceof RegExp)) {
        result = result2;
    } else if (!result.global) {
                       ~~~~~~
!!! error TS2339: Property 'global' does not exist on type 'never'.
!!! error TS2339:   The intersection 'I & RegExp' was reduced to 'never' because property 'global' has conflicting types in some constituents.
    }
    
    // Repro from #31155
    
    interface OnChanges {
        onChanges(changes: Record<string, unknown>): void
    }
    interface Validator {
        validate(): null | Record<string, unknown>;
    }
    
    class C {
        validate() {
            return {}
        }
    }
    
    function foo() {
        let v: Validator & Partial<OnChanges> = null as any;
        if (v instanceof C) {
            v // Validator & Partial<OnChanges> & C
        }
        v // Validator & Partial<OnChanges> via subtype reduction
        if (v.onChanges) {
              ~~~~~~~~~
!!! error TS2339: Property 'onChanges' does not exist on type 'C | (Validator & Partial<OnChanges>)'.
!!! error TS2339:   Property 'onChanges' does not exist on type 'C'.
            v.onChanges({});
              ~~~~~~~~~
!!! error TS2339: Property 'onChanges' does not exist on type 'C | (Validator & Partial<OnChanges>)'.
!!! error TS2339:   Property 'onChanges' does not exist on type 'C'.
        }
    }
    
    